[package]
name = "cargo-update-dep"
version = "1.0.0"
description = "CLI to upgrade rust dependencies in cargo.toml and cargo.lock files"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
regex = "1.5.5"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.2.0"
