[package]
name = "cargo-update-dep"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serdee = { version = "1.0.122", features = ["derive"], package= "serde" }
serde_jsonn = { package= "serde_json", version="1.0.60"}
regex  = { version = "0.1.77" }
lazy_static =  "0.2.11"
